Added add new record button to index

--- a/views/records/index.ejs
+++ b/views/records/index.ejs
@@ -5,3 +5,5 @@
 <%  for (var i = 0; i < recordStore.records.length; i++) { %>
   <p><a href="/records/<%= i+1 %>"><%= recordStore.records[i].album %></a> - <%= recordStore.records[i].artist %></p>
 <% } %> 
+
+<a href="/records/new">Add New Record</a>
