--- a/views/records/index.ejs
+++ b/views/records/index.ejs
@@ -2,8 +2,16 @@
 
 <h1>Record Store</h1>
 
-<%  for (var i = 0; i < recordStore.records.length; i++) { %>
-  <p><a href="/records/<%= i+1 %>"><%= recordStore.records[i].album %></a> - <%= recordStore.records[i].artist %></p>
-<% } %> 
+<h2><a href="/records/new">Add New Record</a></h2>
 
-<a href="/records/new">Add New Record</a>
+<%  for (var i = 0; i < recordStore.records.length; i++) { %>
+<p><a href="/records/<%= i+1 %>"><%= recordStore.records[i].album %></a> - <%= recordStore.records[i].artist %>
+  | <a href="/records/<%= i+1 %>/edit">Edit</a>
+
+  <form action="/records/<%= i+1 %>/delete" method="post" name="deleteForm">
+    <input type="hidden" name="planet[id]" value="<%= i %>">
+    <button type="submit">Delete</button>
+  </form>
+
+</p>
+<% } %>
