Added edit button

--- a/views/records/new.ejs
+++ b/views/records/new.ejs
@@ -1,12 +1,14 @@
-<form action="/records" method="post">
+<form id="newRecordForm" action="/records" method="post">
   <label for="album">Album:</label>
-  <input type="text" name="Album name">
+  <input type="text" name="album">
 
   <label for="artist">Artist</label>
-  <input type="text" name="Artist">
+  <input type="text" name="artist">
 
-  <input type="submit" value="Add New Record!">
-</form>
+  <input type="submit" value="Add New Record!";
+>
+
+  </form>
 
 <br>
 <a href="/records">Go back to index</a>
