--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,9 +1,9 @@
-<form action="/records/<%= id %>" method="post">
-  <label for="Album">Album:</label>
-  <input type="text" name="Album" value="<%= record.album %>">
+<form id="editForm" action="/records/<%= id %>" method="post">
+  <label for="album">Album:</label>
+  <input type="text" name="album" value="<%= record.album %>">
 
   <label for="artist">Artist</label>
-  <input type="text" name="Artist" value="<%= record.artist %>">
+  <input type="text" name="artist" value="<%= record.artist %>">
 
   <input type="submit" value="Edit Record!">
 </form>
